--- a/config/ui/patches.in
+++ b/config/ui/patches.in
@@ -1256,6 +1256,27 @@ config FREETZ_PATCH_WEBIF_FEATURES
 		 821-show_network_repeater.sh
 		 822-show_dvb_services.sh
 
+config FREETZ_PATCH_EXTENDER_INTERNET
+	bool "Enable internet and certificate settings in AVM user web interface"
+	depends on FREETZ_TYPE_EXTENDER && \
+	    ( \
+		FREETZ_AVM_VERSION_07_2X_MIN || \
+		FREETZ_SHOW_DEVELOPER \
+		) && ( \
+		FREETZ_TYPE_1750 || \
+		FREETZ_TYPE_2400 || \
+		FREETZ_SHOW_DEVELOPER \
+		)
+	default n
+	help
+		Enables hidden menu for internet and certificate settings
+		in AVM user web interface for wifi extenders.
+		This allows the upload of custom user certificates instead
+		of box's self signed  certificates for secure https traffic.
+		Tested for repeaters 1750E and 2400 with Firmware > 7.2X.
+		Developer can activate this patch at own risk also
+		for other (untested) repeaters and firmwares.
+
 config FREETZ_PATCH_SIGNED
 	bool "Patch web menu signed message"
 	default n
